# rsias

./: .dockerignore  .gitignore  GEMINI.md  README.md  RSIAS.md  docker-compose.yml  package.json
.agents/commands/: speckit.analyze.toml  speckit.specify.toml  speckit.taskstoissues.toml
.agents/skills/gin/: SKILL.md
.agents/skills/go-yfinance/: SKILL.md
.gemini/: session.md
.gemini/commands/: speckit.checklist.toml  speckit.clarify.toml
.gemini/skills/junior-mentor/: SKILL.md
.specify/integrations/: gemini.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
ai-worker/: main.py  pyproject.toml
ai-worker/src/: intelligence_worker.py
ai-worker/src/services/: ai_service.py
ai-worker/src/shared/: kafka_consumer.py  kafka_producer.py  models.py
backend/: go.mod  go.sum
backend/cmd/bff/: main.go
backend/cmd/migrate/: main.go
backend/cmd/persistence/: main.go
backend/cmd/producer/: news_producer.go
backend/internal/company/: handler.go  (+4 more)
backend/migrations/: 001_initial_schema.sql  002_relational_schema.sql  003_seed_categories.sql
docs/: basic-requirements.md  overview.mermaid
frontend/: package.json
frontend/src/: App.tsx  index.css  router.tsx
shared/proto/: market_data.proto
specs/001-rsias-core-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-custom-watchlists/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-realtime-portfolio-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md
(+60 files in other folders)
